Rewrite event module
