# backend/core/models/journey.js
@@ -1,60 +1,60 @@
 'use strict';
 import { Model } from 'sequelize';
 export default (sequelize, DataTypes) => {
-  class Event extends Model {
+  class Journey extends Model {
     /**
      * Helper method for defining associations.
      * This method is not a part of Sequelize lifecycle.
      * The `models/index` file will call this method automatically.
      */
     static associate(models) {
-      Event.hasMany(models['SupplyEvent'], { foreignKey: 'eventId' });
-      Event.belongsTo(models['User'], { as: 'user', foreignKey: 'userId' });
-      Event.hasOne(models['Journey'], { foreignKey: 'eventId' });
+      Journey.belongsTo(models['Event'], { as: 'journey', foreignKey: 'eventId' });
     }
   }
-  Event.init({
+  Journey.init({
     id: {
       type: DataTypes.INTEGER,
       primaryKey: true,
       autoIncrement: true
     },
-    userId: {
+    eventId: {
       type: DataTypes.INTEGER,
       allowNull: false
     },
-    description: {
-      type: DataTypes.TEXT
-    },
-    startTime: {
-      type: DataTypes.DATE,
+    plate: {
+      type: DataTypes.STRING,
       allowNull: false
     },
-    name: {
-      type: DataTypes.INTEGER,
-      allowNull: false
+    isCompleted: {
+      type: DataTypes.BOOLEAN,
+      allowNull: false,
+      defaultValue: false
     },
-    address_line: {
+    endTime: {
+      type: DataTypes.DATE
+    },
+    dest_address_line: {
       type: DataTypes.STRING
     },
-    ward: {
+    dest_ward: {
       type: DataTypes.STRING,
       allowNull: false
     },
-    district: {
+    dest_district: {
       type: DataTypes.STRING,
       allowNull: false
     },
-    city_province: {
+    dest_city_province: {
       type: DataTypes.STRING,
       allowNull: false
     }
   }, {
     sequelize,
-    modelName: 'Event',
+    modelName: 'Journey',
+    timestamps: false,
     indexes: [
-      { fields: ['userId'] },
-    ],
+      { fields: ['eventId'] }
+    ]
   });
-  return Event;
+  return Journey;
 };
