# backend/swagger.yaml
@@ -573,24 +573,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /event/names:
-    get:
-      summary: Get all event names
-      operationId: Event_getNames
-      responses:
-        200:
-          description: Get all event names successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/EventNamesResponse'
-        500:
-          description: Error message
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-
   /events:
     get:
       summary: Get all events
@@ -698,7 +680,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /event:
+  /event/journey:
     post:
       summary: Create a new event
       operationId: Event_create
@@ -713,6 +695,51 @@ paths:
       responses:
         201:
           description: Create a new event successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EventResponse'
+        500:
+          description: Error message
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /event/journey/:id:
+    post:
+      summary: Complete a journey event
+      operationId: Event_complete
+      security:
+        - bearerAuth: []
+      responses:
+        201:
+          description: Complete a journey event successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EventResponse'
+        500:
+          description: Error message
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+    patch:
+      summary: Edit a journey event
+      operationId: Event_edit
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EventRequest'
+      responses:
+        201:
+          description: Edit a journey event successfully
           content:
             application/json:
               schema:
@@ -1336,27 +1363,9 @@ components:
         "4": "cái"
         "5": "nghìn VND"
 
-    EventNames:
-      type: object
-      description: "A map of IDs to event names"
-      additionalProperties:
-        type: string
-      example:
-        "4": "Xe vận chuyển xuất phát"
-        "5": "Xe vận chuyển dừng lại"
-        "6": "Giao hàng đến người nhận"
-
-    EventNamesResponse:
-      type: object
-      properties:
-        message: { type: string }
-        names:
-          $ref: '#/components/schemas/EventNames'
-
     BaseEvent:
       type: object
       properties:
-        name: { type: string }
         description: { type: string }
         startTime:
           type: string
@@ -1366,6 +1375,11 @@ components:
         ward: { type: string }
         district: { type: string }
         city_province: { type: string }
+        dest_address_line: { type: string }
+        dest_ward: { type: string }
+        dest_district: { type: string }
+        dest_city_province: { type: string }
+        plate: { type: string }
 
     Event:
       allOf:
@@ -1374,6 +1388,12 @@ components:
           properties:
             id: { type: integer }
             user: { type: string }
+            name: { type: integer }
+            isCompleted: { type: boolean }
+            endTime:
+              type: string
+              format: date-time
+              example: "2025-12-28T21:23:27Z"
             createdAt:
               type: string
               format: date-time
@@ -1393,14 +1413,6 @@ components:
               items:
                 type: integer
 
-    Events:
-      allOf:
-        - $ref: '#/components/schemas/Event'
-        - type: object
-          properties:
-            total_supplies:
-              type: integer
-
     EventsResponse:
       type: object
       properties:
@@ -1408,7 +1420,7 @@ components:
         events:
           type: array
           items:
-            $ref: '#/components/schemas/Events'
+            $ref: '#/components/schemas/Event'
         total_records: { type: integer }
 
     EventResponse:
@@ -1416,19 +1428,35 @@ components:
       properties:
         message: { type: string }
         event:
-          $ref: '#/components/schemas/Event'
-        user:
-          type: object
-          properties:
-            name: { type: string }
-            email: { type: string }
-            phone: { type: string }
-            role: { type: string }
-        supplies:
-          type: array
-          items:
-            $ref: '#/components/schemas/Supply'
-        total_supplies: { type: integer }
+          allOf:
+            - $ref: '#/components/schemas/BaseEvent'
+            - type: object
+              properties:
+                id: { type: integer }
+                isCompleted: { type: boolean }
+                endTime:
+                  type: string
+                  format: date-time
+                  example: "2025-12-28T21:23:27Z"
+                createdAt:
+                  type: string
+                  format: date-time
+                  example: "2025-12-28T21:23:27Z"
+                updatedAt:
+                  type: string
+                  format: date-time
+                  example: "2025-12-28T21:23:27Z"
+                user:
+                  type: object
+                  properties:
+                    name: { type: string }
+                    email: { type: string }
+                    phone: { type: string }
+                    role: { type: string }
+                supplies:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/Supply'
 
     
     UnitsResponse:
@@ -1461,6 +1489,7 @@ components:
           properties:
             id: { type: integer }
             donor: { type: string }
+            proof: { type: string }
             createdAt:
               type: string
               format: date-time
